--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
-colorama==0.4.4
-cryptography==3.4.7
+colorama==0.4.4; sys_platform == 'win32'
+cryptography==3.4.7; sys_platform == 'win32'
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
@@ -49,10 +49,12 @@ oauthlib==3.1.1
 packaging==21.0
 pandocfilters==1.4.3
 parso==0.8.2
+pexpect==4.8.0; sys_platform == 'linux'
 pickleshare==0.7.5
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
 protobuf==3.17.3
+ptyprocess==0.7.0; sys_platform == 'linux'
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -64,8 +66,8 @@ python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-editor==1.0.4
 pytz==2021.1
-pywin32==301
-pywinpty==1.1.3
+pywin32==301; sys_platform == 'win32'
+pywinpty==1.1.3; sys_platform == 'win32'
 pyzmq==22.2.1
 qtconsole==5.1.1
 QtPy==1.10.0
