--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 colorama==0.4.4; sys_platform == 'win32'
-cryptography==3.4.7; sys_platform == 'win32'
+cryptography==3.4.8
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
