--- a/requirements.txt
+++ b/requirements.txt
@@ -152,6 +152,12 @@ decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0" \
 defusedxml==0.7.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:1bb3032db185915b62d7c6209c5a8792be6a32ab2fedacc84e01b52c51aa3e69 \
     --hash=sha256:a352e7e428770286cc899e2542b6cdaedb2b4953ff269a210103ec58f6198a61
+dnspython==2.2.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:0f7569a4a6ff151958b64304071d370daa3243d15941a7beedf0c9fe5105603e \
+    --hash=sha256:a851e51367fb93e9e1361732c1d60dab63eff98712e503ea7d92e6eccb109b4f
+email-validator==1.3.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:553a66f8be2ec2dea641ae1d3f29017ab89e9d603d4a25cdaac39eefa283d769 \
+    --hash=sha256:816073f2a7cffef786b29928f58ec16cdac42710a53bb18aa94317e3e145ec5c
 entrypoints==0.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:b706eddaa9218a19ebcd67b56818f05bb27589b1ca9e8d797b74affad4ccacd4 \
     --hash=sha256:f174b5ff827504fd3cd97cc3f8649f3693f51538c7e4bdf3ef002c8429d42f9f
@@ -243,7 +249,7 @@ greenlet==2.0.1 ; python_version >= "3.10" and (platform_machine == "aarch64" or
 httplib2==0.21.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:987c8bb3eb82d3fa60c68699510a692aa2ad9c4bd4f123e51dfb1488c14cdd01 \
     --hash=sha256:fc144f091c7286b82bec71bdbd9b27323ba709cc612568d3000893bfd9cb4b34
-idna==3.4 ; python_version >= "3.10" and python_version < "4" \
+idna==3.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:814f528e8dead7d329833b91c5faa87d60bf71824cd12a7530b5526063d02cb4 \
     --hash=sha256:90b77e79eaa3eba6de819a0c442c0b4ceefc341a7a2ab77d7562bf49f425c5c2
 ipykernel==6.17.1 ; python_version >= "3.10" and python_version < "4.0" \
@@ -288,9 +294,9 @@ jupyterlab-server==2.16.5 ; python_version >= "3.10" and python_version < "4.0" 
 jupyterlab-widgets==3.0.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:4c9275daa6d20fc96c3aea45756ece7110850d035b0b93a6a40e918016b927da \
     --hash=sha256:9a568e022b8bb53ab23291f6ddb52f8002b789c2c5763378cbc882be1d619be8
-jupyterlab==3.5.1 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:59a1b2d79d4b3ebee4d997c8bed8cf450f460c7c35f46b613a93f0b7712b47fc \
-    --hash=sha256:c6748b4f21850c0095ed2187ce86d7e06edd9d1180cc4e6a572c4013163c0c74
+jupyterlab==3.5.2 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:10ac094215ffb872ddffbe2982bf1c039a79fecc326e191e7cc5efd84f331dad \
+    --hash=sha256:16e9b8320dcec469c70bb883e993e0bb84c4ea1a734063731f66922cf72add1b
 mako==1.2.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:c97c79c018b9165ac9922ae4f32da095ffd3c4e6872b45eded42926deea46818 \
     --hash=sha256:d60a3903dc3bb01a18ad6a89cdbe2e4eadc69c0bc8ef1e3773ba53d44c3f7a34
@@ -347,12 +353,12 @@ nbclassic==0.3.7 ; python_version >= "3.10" and python_version < "4.0" \
 nbclient==0.6.3 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2747ac9b385720d8a6c34f2f71e72cbe64aec6cadaadcc064a4df0b0e99c5874 \
     --hash=sha256:b80726fc1fb89a0e8f8be1e77e28d0026b1e8ed90bc143c8a0c7622e4f8cdd9e
-nbconvert==7.2.6 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:c9c0e4b26326f7658ebf4cda0acc591b9727c4e3ee3ede962f70c11833b71b40 \
-    --hash=sha256:f933e82fe48b9a421e4252249f6c0a9a9940dc555642b4729f3f1f526bb16779
-nbformat==5.7.0 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:1b05ec2c552c2f1adc745f4eddce1eac8ca9ffd59bb9fd859e827eaa031319f9 \
-    --hash=sha256:1d4760c15c1a04269ef5caf375be8b98dd2f696e5eb9e603ec2bf091f9b0d3f3
+nbconvert==7.2.7 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:8b727b0503bf4e0ff3907c8bea030d3fc4015fbee8669ac6ac2a5a6668b49d5e \
+    --hash=sha256:e057f1f87a6ac50629b724d9a46b40e2ba394d6f20ee7f33f4acef1928a15af3
+nbformat==5.7.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:3810a0130453ed031970521d20989b8a592f3c2e73283a8280ae34ae1f75b3f8 \
+    --hash=sha256:e52ab802ce7f7a2863861e914642f021b9d7c23ad9726d14c36df92a79acd754
 nbgrader==0.8.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:af9303537687c8326591aaa996970a3b158f6bc065da3a4b292b9060e1edee71 \
     --hash=sha256:cb31a81aa1a8b7365e074f20ca31f46ba0ba3e99b2757f6adf0553f5d446d97c
@@ -472,6 +478,9 @@ pyrsistent==0.19.2 ; python_version >= "3.10" and python_version < "4.0" \
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
     --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
+python-dotenv==0.21.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:1684eb44636dd462b66c3ee016599815514527ad99965de77f43e0944634a7e5 \
+    --hash=sha256:b77d08274639e3d34145dfa6c7008e66df0f04b7be7a75fd0d5292c191d79045
 pytz==2022.7 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:7ccfae7b4b2c067464a6733c6261673fdb8fd1be905460396b97a073e9fa683a \
     --hash=sha256:93007def75ae22f7cd991c84e02d434876818661f8df9ad5df9e950ff4e52cfd
