--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
         args: ["-f", "requirements.txt", "-o", "requirements.txt"]
       - id: poetry-export
         args: ["-f", "requirements.txt", "-o", "requirements_dev.txt", "--with", "dev"]
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -29,6 +30,12 @@ repos:
       - id: mixed-line-ending
       - id: name-tests-test
 
+  - repo: https://github.com/sourcery-ai/sourcery
+    rev: v1.0.2
+    hooks:
+      - id: sourcery
+        args: [ --diff=git diff HEAD ]
+
   - repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
@@ -38,3 +45,8 @@ repos:
     rev: v0.0.186
     hooks:
       - id: ruff
+
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v0.991
+  #   hooks:
+  #     - id: mypy
