--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ email-validator = "^1.3.0"
 pre-commit = "^2.20.0"
 black = "^22.12.0"
 ruff = "^0.0.187"
+mypy = "^0.991"
+sourcery-cli = "^1.0.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -63,3 +65,11 @@ exclude = [
 target-version = "py310"
 fix = true
 ignore-init-module-imports = true
+
+[tool.mypy]
+python_version = "3.10"
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unreachable = true
