--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,17 @@ email-validator = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
-black = "^22.12.0"
+black = {extras = ["jupyter"], version = "^22.12.0"}
 ruff = "^0.0.187"
 mypy = "^0.991"
 sourcery-cli = "^1.0.2"
+pytest = "^7.2.0"
+hypothesis = {extras = ["pytz"], version = "^6.61.0"}
+types-pytz = "^2022.7.0.0"
+types-requests = "^2.28.11.7"
+sqlalchemy2-stubs = "^0.0.2a31"
+nb-clean = "^2.4.0"
+types-python-dateutil = "^2.8.19.5"
 
 [build-system]
 requires = ["poetry-core"]
@@ -68,8 +75,4 @@ ignore-init-module-imports = true
 
 [tool.mypy]
 python_version = "3.10"
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-warn_redundant_casts = true
-warn_return_any = true
-warn_unreachable = true
+strict = true
