--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,3 +45,14 @@ repos:
     rev: v0.0.186
     hooks:
       - id: ruff
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.991
+    hooks:
+      - id: mypy
+        additional_dependencies: [
+          types-pytz==2022.7.0.0,
+          types_requests==2.28.11.7,
+          sqlalchemy2-stubs==0.0.2a31,
+          types-python-dateutil==2.8.19.5,
+        ]
