--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ email-validator = "^1.3.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
 black = {extras = ["jupyter"], version = "^22.12.0"}
-ruff = "^0.0.187"
 mypy = "^0.991"
 sourcery-cli = "^1.0.2"
 pytest = "^7.2.0"
@@ -28,6 +27,7 @@ types-requests = "^2.28.11.7"
 sqlalchemy2-stubs = "^0.0.2a31"
 nb-clean = "^2.4.0"
 types-python-dateutil = "^2.8.19.5"
+ruff = "^0.0.193"
 
 [build-system]
 requires = ["poetry-core"]
@@ -56,13 +56,13 @@ exclude = '''
 line-length = 88
 select = [
     "E", "F", "W", "C90", "I", "D", "UP", "N", "YTT", "ANN", "S", "BLE", "FBT",
-    "B", "A", "C4", "T10", "ICN", "T20", "Q", "SIM", "TID", "ARG",
-    "ERA", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF",
+    "B", "A", "C4", "T10", "ICN", "T20", "Q", "RET", "SIM", "TID", "ARG",
+    "ERA", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF"
 ]
 ignore = [
     "FBT001", "FBT002", "D100", "D105", "ANN101", "ANN102", "ANN002", "ANN003",
     "ANN401", "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407",
-    "D408", "D409", "D413",
+    "D408", "D409", "D413", "RET504",
 ]
 exclude = [
     ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
