--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,4 +55,5 @@ repos:
           types_requests==2.28.11.7,
           sqlalchemy2-stubs==0.0.2a31,
           types-python-dateutil==2.8.19.5,
+          alembic==1.9.1,
         ]
