--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: name-tests-test
+        args: [ --pytest-test-first ]
 
   - repo: https://github.com/sourcery-ai/sourcery
     rev: v1.0.2
