--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Evgeny Tsydenov <evgenytsydenov@gmail.com>"]
 readme = "README.md"
-packages = [{include = "jupyter_grader", from = "src"}]
+packages = [{ include = "jupyter_grader", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -17,11 +17,11 @@ email-validator = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
-black = {extras = ["jupyter"], version = "^22.12.0"}
+black = { extras = ["jupyter"], version = "^22.12.0" }
 mypy = "^0.991"
 sourcery-cli = "^1.0.2"
 pytest = "^7.2.0"
-hypothesis = {extras = ["pytz"], version = "^6.61.0"}
+hypothesis = { extras = ["pytz"], version = "^6.61.0" }
 types-pytz = "^2022.7.0.0"
 types-requests = "^2.28.11.7"
 sqlalchemy2-stubs = "^0.0.2a31"
@@ -72,6 +72,9 @@ exclude = [
 target-version = "py310"
 fix = true
 ignore-init-module-imports = true
+
+[tool.ruff.per-file-ignores]
+"test_*.py" = ["S101"]
 
 [tool.mypy]
 python_version = "3.10"
