--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Evgeny Tsydenov <evgenytsydenov@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "jupyter_grader", from = "src" }]
+packages = [{ include = "jpgrader", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
